instagram and strava updates from 2017-06-03

--- a/index.html
+++ b/index.html
@@ -173,6 +173,49 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000959.jpg" title="Happy Friday!! Have a great weekend,
+Cleary riders!
+🌞🚲⛱" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clearybikes</h4>
+                              <small>Happy Friday!! Have a great weekend,
+Cleary riders!
+🌞🚲⛱</small>
+                           </div>
+                           <img src="../lsphotos/image000959.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000960.jpg" title="Beautiful day for a bike ride. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Beautiful day for a bike ride. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000960.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000958.jpg" title="Happy National Donut Day!! 🍩🚲 swing by the Pony Shop today for a donut (while they last 😉) #internationaldonutday #🍩 #donutride #cycling #bicycle #moots #cyclocross #evanston #nationaldonutday #bikeevanston #lovestarbicyclebags #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy National Donut Day!! 🍩🚲 swing by the Pony Shop today for a donut (while they last 😉) #internationaldonutday #🍩 #donutride #cycling #bicycle #moots #cyclocross #evanston #nationaldonutday #bikeevanston #lovestarbicyclebags #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000958.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000957.jpg" title="Fantastic night ride tonight. All great rides end with beer. #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -401,45 +444,6 @@ First ride of the season where sunrise is officially before the ride start time.
                               <small>So proud of this guy (and the rest of the #lovestarraceclub crew!) who braved The Almonzo100 race today in driving rain, 20+ mph winds, and 33 degrees in Spring Valley, Minnesota. Enjoy those recovery beers as you plan your next adventure!!! #cycling #lovestarfactoryteam #cyclocross #lovestarraceclub #almonzo100 #mudsweatandgears #adventurebike #elliotlovestarbicycles #lovestar #elliotlovestarbicyclebags #proudofyouson</small>
                            </div>
                            <img src="../lsphotos/image000939.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000941.jpg" title="🚲🚲🚲#lovestarraceclub #mudsweatandgears #adventurebike #gravel #cyclocross #bicycle #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>🚲🚲🚲#lovestarraceclub #mudsweatandgears #adventurebike #gravel #cyclocross #bicycle #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000941.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000940.jpg" title="Driving Rain. Sustained 20+ mph winds. Real feel temperature of 33 degrees at the start line. #Almanzo100 2017 defeated me & the rest of our #lovestarraceclub crew. Time to have some recovery beers and plan our next adventure. #cycling #gravelgrinder #bicycle #cyclocross #gravel #adventurebike #doepicshit #mudsweatandgears" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Driving Rain. Sustained 20+ mph winds. Real feel temperature of 33 degrees at the start line. #Almanzo100 2017 defeated me & the rest of our #lovestarraceclub crew. Time to have some recovery beers and plan our next adventure. #cycling #gravelgrinder #bicycle #cyclocross #gravel #adventurebike #doepicshit #mudsweatandgears</small>
-                           </div>
-                           <img src="../lsphotos/image000940.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000938.jpg" title="Pinning on a number tomorrow for my 5th #Almazo100 ... weather is starting to look like the makings of an epic day. Our hotel clerk told us that he had 20 room cancellations in the last day. #belgianthefup #gravel #gravelgrinder #cycling #bicycle #adventurebike #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pinning on a number tomorrow for my 5th #Almazo100 ... weather is starting to look like the makings of an epic day. Our hotel clerk told us that he had 20 room cancellations in the last day. #belgianthefup #gravel #gravelgrinder #cycling #bicycle #adventurebike #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000938.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
