--- a/instagram24.html
+++ b/instagram24.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000193.jpg" title="Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking </small>
+                           </div>
+                           <img src="../lsphotos/image000193.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000194.jpg" title="Cold, dark & powder. #fatbike #nightride #lovestarbicyclebags #cycling #bikewinter " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold, dark & powder. #fatbike #nightride #lovestarbicyclebags #cycling #bikewinter </small>
+                           </div>
+                           <img src="../lsphotos/image000194.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000195.jpg" title="Toasty in her micro-pogies! #babySNUB #lovestarbicyclebags #pogies #fatbike #clearybikes #adventuredad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Toasty in her micro-pogies! #babySNUB #lovestarbicyclebags #pogies #fatbike #clearybikes #adventuredad</small>
+                           </div>
+                           <img src="../lsphotos/image000195.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000196.jpg" title="More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
 ・・・
 Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
@@ -228,45 +267,6 @@ Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocr
                               <small>Didn't think I'd see this much grass this time of year... #elniño #elninoisspanishforthenino #christmaslights #cycling #cyclocross #cx #moots #lovestarbicyclebags #raphafestive500 #festive500</small>
                            </div>
                            <img src="../lsphotos/image000209.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000640.jpg" title="Christmas Eve ride...complete with detour to see the #HomeAlone house. #buzzyourgirlfriendwoof #cycling #moots #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Christmas Eve ride...complete with detour to see the #HomeAlone house. #buzzyourgirlfriendwoof #cycling #moots #lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000640.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000210.jpg" title="Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000210.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000211.jpg" title="Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000211.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
