--- a/instagram35.html
+++ b/instagram35.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000305.jpg" title="Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000305.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000306.jpg" title="Sometimes you just *have* to ride, even in the pouring rain. Like &quot;Dad&quot; says, &quot;character building&quot; #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Sometimes you just *have* to ride, even in the pouring rain. Like "Dad" says, "character building" #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000306.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000739.jpg" title="Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000739.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000307.jpg" title="Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -224,45 +263,6 @@
                               <small>One sleeping. One singing at the top of her lungs. #adventuredad #cycling #cyclist #dadlife #bicycle #thulechariot #bikechi #lovestarfactoryteam #</small>
                            </div>
                            <img src="../lsphotos/image000748.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000749.jpg" title="#LoveStarFactoryTeam @ddave12000" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#LoveStarFactoryTeam @ddave12000</small>
-                           </div>
-                           <img src="../lsphotos/image000749.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000750.jpg" title="Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather</small>
-                           </div>
-                           <img src="../lsphotos/image000750.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000751.jpg" title="Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane</small>
-                           </div>
-                           <img src="../lsphotos/image000751.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
