--- a/instagram36.html
+++ b/instagram36.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000749.jpg" title="#LoveStarFactoryTeam @ddave12000" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#LoveStarFactoryTeam @ddave12000</small>
+                           </div>
+                           <img src="../lsphotos/image000749.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000750.jpg" title="Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather</small>
+                           </div>
+                           <img src="../lsphotos/image000750.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000751.jpg" title="Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane</small>
+                           </div>
+                           <img src="../lsphotos/image000751.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000315.jpg" title="Brainstorming begins... #fatbike #bikepacking #framebag #lovestarbicyclebags #cycling #bikechi #bicycle #adventurebike" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub</small>
                            </div>
                            <img src="../lsphotos/image000328.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000329.jpg" title="Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a flashy #Lovestarbicyclebags SaddlePack . Made this one to match a Lovestar Factory Team rider's  framebag. #handmade #bikepacking #bicycle #bicyclebag #cycling #custom #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000329.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000330.jpg" title="Searching through cross race photos from this past year. Came across this gem from #snowymountainphotography check him out! #lovestarbicyclebags #cyclocross #cx #barriers #moots #championsystem #bikechi #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Searching through cross race photos from this past year. Came across this gem from #snowymountainphotography check him out! #lovestarbicyclebags #cyclocross #cx #barriers #moots #championsystem #bikechi #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000330.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000331.jpg" title="Morning commute made me thankful for a high BB and waterproof bags. #lovestarbicyclebags #northbranchtrail #bikechi #moots #adventurebike #cycling #cyclocross #cx #bikecommute" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Morning commute made me thankful for a high BB and waterproof bags. #lovestarbicyclebags #northbranchtrail #bikechi #moots #adventurebike #cycling #cyclocross #cx #bikecommute</small>
-                           </div>
-                           <img src="../lsphotos/image000331.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
