--- a/instagram41.html
+++ b/instagram41.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000407.jpg" title="Yesterday's #ILRcx course was fun & challenging with lots of sand and cold weather...today's race is looking quite snowy so it will be interesting to see how the course has changed in just 24 hours... #cyclocross #cycling #chicago #chicagocrosscup #cx #bikechi #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Yesterday's #ILRcx course was fun & challenging with lots of sand and cold weather...today's race is looking quite snowy so it will be interesting to see how the course has changed in just 24 hours... #cyclocross #cycling #chicago #chicagocrosscup #cx #bikechi #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000407.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000408.jpg" title="Lovestar Factory Team riders going head to head in the sandpits at #ILRcx yesterday #cyclocross #cycling #cx #sandpit #crossisboss #chicago #chicagocrosscup #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team riders going head to head in the sandpits at #ILRcx yesterday #cyclocross #cycling #cx #sandpit #crossisboss #chicago #chicagocrosscup #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000408.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000409.jpg" title="One more #PSIcx pic from #jayloophotography it was a tough race (my first post injury ride) but had a good time despite the hurt #cyclocross #cx #paincave #bikechi #cycling #defeet #giroempire #lazersport #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One more #PSIcx pic from #jayloophotography it was a tough race (my first post injury ride) but had a good time despite the hurt #cyclocross #cx #paincave #bikechi #cycling #defeet #giroempire #lazersport #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000409.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000410.jpg" title="Killer #PSIcx photos from @jayloophotography #cyclocross #lovestarbicyclebags #cx #bikechi #moots #lazersport #defeet #giro" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>2nd day this week riding the #DPRT I love Riding in the fall. #cyclocross #cx #moots #gravel #gravelgrinder #bikechi #lovestarbicycles #lovestarbicyclebags #cycling</small>
                            </div>
                            <img src="../lsphotos/image000426.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000427.jpg" title="Moots PsychloX in the wild. #moots #cyclocross #cx #chicago #bikechi #lovestarbicycles #lovestarbicyclebags #dprt" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Moots PsychloX in the wild. #moots #cyclocross #cx #chicago #bikechi #lovestarbicycles #lovestarbicyclebags #dprt</small>
-                           </div>
-                           <img src="../lsphotos/image000427.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000428.jpg" title="I have to admit, the DPR Trail in the fall is pretty hard to beat. #chicago #bikechi #cyclocross #cx #gravel #gravelgrinder #moots #lovestarbicycles #lovestarbicyclebags #dprt #desplainsrivertrail" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I have to admit, the DPR Trail in the fall is pretty hard to beat. #chicago #bikechi #cyclocross #cx #gravel #gravelgrinder #moots #lovestarbicycles #lovestarbicyclebags #dprt #desplainsrivertrail</small>
-                           </div>
-                           <img src="../lsphotos/image000428.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000429.jpg" title="Sampling some fine double track in the North suburbs of #chicago it's amazing what you can find If you know where to look. #cyclocross #gravel #gravelgrinder #cx #bikechi #lovestarbicycles #lovestarbicyclebags #lazersport #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sampling some fine double track in the North suburbs of #chicago it's amazing what you can find If you know where to look. #cyclocross #gravel #gravelgrinder #cx #bikechi #lovestarbicycles #lovestarbicyclebags #lazersport #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000429.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
