--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,47 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000820.jpg" title="Single digit road ride this morning. #icebeard glory...
+#lovestarraceclub #bikewinter #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Single digit road ride this morning. #icebeard glory...
+#lovestarraceclub #bikewinter #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000820.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000821.jpg" title="Frozen coffee ride today...#lovestarraceclub #supersix #zippspeed #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Frozen coffee ride today...#lovestarraceclub #supersix #zippspeed #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000821.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000818.jpg" title="Cold sunrise Solo. #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold sunrise Solo. #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000818.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000817.jpg" title="Cool picture from @agonz21 this morning! #bicycle #cycling #bikewinter #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +261,6 @@
                               <small>Beautiful sunrise ride this morning #lovestarraceclub #rentalbike #sunrise #barrierisland</small>
                            </div>
                            <img src="../lsphotos/image000801.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000800.jpg" title="&quot;In the midst of winter, I found there was, within me, an invincible summer.&quot; #lovestarraceclub #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>"In the midst of winter, I found there was, within me, an invincible summer." #lovestarraceclub #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000800.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000799.jpg" title="Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000799.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000797.jpg" title="#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017.</small>
-                           </div>
-                           <img src="../lsphotos/image000797.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
